; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_fake.c_feth_output.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_fake.c_feth_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.TYPE_3__ = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.mbuf*)* @feth_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @feth_output(i32* %0, %struct.mbuf* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.mbuf*, align 8
  %6 = alloca %struct.mbuf*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.mbuf* %1, %struct.mbuf** %5, align 8
  store i32* null, i32** %9, align 8
  %10 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %11 = icmp eq %struct.mbuf* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %51

13:                                               ; preds = %2
  %14 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %15 = call %struct.mbuf* @copy_mbuf(%struct.mbuf* %14)
  store %struct.mbuf* %15, %struct.mbuf** %6, align 8
  %16 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %17 = call i32 @m_freem(%struct.mbuf* %16)
  store %struct.mbuf* null, %struct.mbuf** %5, align 8
  %18 = load %struct.mbuf*, %struct.mbuf** %6, align 8
  %19 = icmp eq %struct.mbuf* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %13
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @ifnet_stat_increment_out(i32* %21, i32 0, i32 0, i32 1)
  store i32 0, i32* %3, align 4
  br label %51

23:                                               ; preds = %13
  %24 = call i32 (...) @feth_lock()
  %25 = load i32*, i32** %4, align 8
  %26 = call %struct.TYPE_3__* @ifnet_get_if_fake(i32* %25)
  store %struct.TYPE_3__* %26, %struct.TYPE_3__** %7, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %28 = icmp ne %struct.TYPE_3__* %27, null
  br i1 %28, label %29, label %36

29:                                               ; preds = %23
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 1
  %32 = load i32*, i32** %31, align 8
  store i32* %32, i32** %9, align 8
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  store i32 %35, i32* %8, align 4
  br label %36

36:                                               ; preds = %29, %23
  %37 = call i32 (...) @feth_unlock()
  %38 = load i32*, i32** %9, align 8
  %39 = icmp eq i32* %38, null
  br i1 %39, label %40, label %45

40:                                               ; preds = %36
  %41 = load %struct.mbuf*, %struct.mbuf** %6, align 8
  %42 = call i32 @m_freem(%struct.mbuf* %41)
  %43 = load i32*, i32** %4, align 8
  %44 = call i32 @ifnet_stat_increment_out(i32* %43, i32 0, i32 0, i32 1)
  store i32 0, i32* %3, align 4
  br label %51

45:                                               ; preds = %36
  %46 = load i32*, i32** %4, align 8
  %47 = load %struct.mbuf*, %struct.mbuf** %6, align 8
  %48 = load i32*, i32** %9, align 8
  %49 = load i32, i32* %8, align 4
  %50 = call i32 @feth_output_common(i32* %46, %struct.mbuf* %47, i32* %48, i32 %49)
  store i32 0, i32* %3, align 4
  br label %51

51:                                               ; preds = %45, %40, %20, %12
  %52 = load i32, i32* %3, align 4
  ret i32 %52
}

declare dso_local %struct.mbuf* @copy_mbuf(%struct.mbuf*) #1

declare dso_local i32 @m_freem(%struct.mbuf*) #1

declare dso_local i32 @ifnet_stat_increment_out(i32*, i32, i32, i32) #1

declare dso_local i32 @feth_lock(...) #1

declare dso_local %struct.TYPE_3__* @ifnet_get_if_fake(i32*) #1

declare dso_local i32 @feth_unlock(...) #1

declare dso_local i32 @feth_output_common(i32*, %struct.mbuf*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
